objects/copado__Copado_Smart_Help__mdt.object
<CustomObject>
    <fields>
        <fullName>copado__Base_Page__c</fullName>
        <label>Base Page</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>GitCommitChanges</fullName>
                    <default>true</default>
                    <label>GitCommitChanges</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Help_Text__c</fullName>
        <label>Help Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado__Triggering_Action__c</fullName>
        <label>Triggering Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Copado Metadata Grid selection</fullName>
                    <default>true</default>
                    <label>Copado Metadata Grid selection</label>
                </value>
                <value>
                    <fullName>Always show</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Triggering_Value__c</fullName>
        <label>Triggering Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Copado Smart Help</label>
    <pluralLabel>Copado Smart Helps</pluralLabel>
</CustomObject>